# wikitext-cpython

./: .gitignore  .gitmodules  CMakeLists.txt  requirements.txt  setup.py
Include/wikitext/: cpython.h
src/: init.c  wikitext-cpython.def
